trying to fix dropdown visibility

--- a/public/style.css
+++ b/public/style.css
@@ -146,26 +146,30 @@ select {
   appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
-    background-color: white; /* Or another background that contrasts the text */
+    background-color: white; 
     border: 1px solid #ccc;
     padding: 5px;
     color: black;
     cursor: pointer;
+    font-size: 16px; 
+    width: 100%; 
+    box-sizing: border-box;
+
 }
 
 option {
   color: black;
   background-color: white;
-  display: block;
-  visibility: visible;
-}
-
-datalist {
-  display: none;
+  font-size: 16px; 
+  padding: 5px;
 }
 
 select:focus {
   outline: 2px solid rgb(161, 123, 161);
+}
+
+select:hover {
+  background-color: #f0f0f0; 
 }
 
 
